Oups, spaces should not avoid line wrapping

--- a/less/forum/chat.less
+++ b/less/forum/chat.less
@@ -146,7 +146,7 @@
                     padding-top: 3px;
                     word-break: break-word;
                     padding-right: 15px;
-                    white-space: pre;
+                    white-space: pre-wrap;
                 }
 
                 .clear {
